Revert to an simpler version
