# docs/swagger.json
@@ -1,86 +1,18 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "An example template of a Golang backend API using Fiber and Postgres.",
+        "description": "This is a sample API template.",
         "title": "API Template",
         "contact": {
             "name": "ZiplEix"
         },
-        "version": "2.0"
+        "version": "0.1"
     },
     "basePath": "/",
     "paths": {
-        "/login": {
-            "post": {
-                "description": "login one user.",
-                "consumes": [
-                    "*/*"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Login one user.",
-                "parameters": [
-                    {
-                        "description": "User to login",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/user.loginUserRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/user.loginUserResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/register": {
-            "post": {
-                "description": "creates one user and loged in him.",
-                "consumes": [
-                    "*/*"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Create one user and login him.",
-                "parameters": [
-                    {
-                        "description": "User to create",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/user.createUserRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/user.createUserResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/todos": {
             "get": {
-                "description": "fetch every todo available.",
+                "description": "fetch every todo available even if marqued as deleted.",
                 "consumes": [
                     "*/*"
                 ],
@@ -90,23 +22,23 @@
                 "tags": [
                     "todos"
                 ],
-                "summary": "Get all todos.",
+                "summary": "Get all todos even deleted",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/todo.TodoDB"
+                                "$ref": "#/definitions/models.Todo"
                             }
                         }
                     }
                 }
             },
             "post": {
-                "description": "creates one todo.",
+                "description": "create a single todo.",
                 "consumes": [
-                    "*/*"
+                    "application/json"
                 ],
                 "produces": [
                     "application/json"
@@ -114,7 +46,7 @@
                 "tags": [
                     "todos"
                 ],
-                "summary": "Create one todo.",
+                "summary": "Create a todo.",
                 "parameters": [
                     {
                         "description": "Todo to create",
@@ -122,7 +54,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/todo.createTodoRequest"
+                            "$ref": "#/definitions/models.Todo"
                         }
                     }
                 ],
@@ -130,17 +62,44 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/todo.createTodoResponse"
+                            "$ref": "#/definitions/models.Todo"
                         }
                     }
                 }
             }
         },
-        "/todos/{id}": {
+        "/todos/:id": {
             "get": {
-                "description": "fetch one todo by id.",
+                "description": "fetch a single todo by id.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "todos"
+                ],
+                "summary": "Get a sigle todo",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Todo ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Todo"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "update a single todo.",
                 "consumes": [
-                    "*/*"
+                    "application/json"
                 ],
                 "produces": [
                     "application/json"
@@ -148,7 +107,43 @@
                 "tags": [
                     "todos"
                 ],
-                "summary": "Get one todo.",
+                "summary": "Update a todo.",
+                "parameters": [
+                    {
+                        "description": "Todo update data",
+                        "name": "todo",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Todo"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Todo ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Todo"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "delete a single todo by id.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "todos"
+                ],
+                "summary": "Delete a single todo.",
                 "parameters": [
                     {
                         "type": "string",
@@ -162,62 +157,8 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/todo.TodoDB"
+                            "$ref": "#/definitions/models.Todo"
                         }
-                    }
-                }
-            },
-            "put": {
-                "description": "updates one todo by id.",
-                "consumes": [
-                    "*/*"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "todos"
-                ],
-                "summary": "Update one todo.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Todo ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            },
-            "delete": {
-                "description": "deletes one todo by id.",
-                "consumes": [
-                    "*/*"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "todos"
-                ],
-                "summary": "Delete one todo.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Todo ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
                     }
                 }
             }
@@ -236,7 +177,7 @@
                 }
             }
         },
-        "todo.TodoDB": {
+        "models.Todo": {
             "type": "object",
             "properties": {
                 "completed": {
@@ -248,9 +189,6 @@
                 "deletedAt": {
                     "$ref": "#/definitions/gorm.DeletedAt"
                 },
-                "description": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "integer"
                 },
@@ -258,63 +196,6 @@
                     "type": "string"
                 },
                 "updatedAt": {
-                    "type": "string"
-                }
-            }
-        },
-        "todo.createTodoRequest": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                }
-            }
-        },
-        "todo.createTodoResponse": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
-                }
-            }
-        },
-        "user.createUserRequest": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "user.createUserResponse": {
-            "type": "object",
-            "properties": {
-                "token": {
-                    "type": "string"
-                }
-            }
-        },
-        "user.loginUserRequest": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "user.loginUserResponse": {
-            "type": "object",
-            "properties": {
-                "token": {
                     "type": "string"
                 }
             }
